--- a/feature/flight-tickets/src/main/res/layout/fragment_home.xml
+++ b/feature/flight-tickets/src/main/res/layout/fragment_home.xml
@@ -16,7 +16,7 @@
         android:gravity="center_horizontal"
         android:text="@string/flights_search"
         android:paddingBottom="36dp"
-        android:textAppearance="?attr/textAppearanceTitleLarge" />
+        android:textAppearance="?attr/title_1" />
 
     <include layout="@layout/card_search" android:id="@+id/card_search" />
 
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="@string/fly_away_in_musical_way"
-        android:textAppearance="?attr/textAppearanceTitleLarge" />
+        android:textAppearance="?attr/title_1" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/offers"
