--- a/feature/flight-tickets/src/main/res/layout/item_ticket_offer.xml
+++ b/feature/flight-tickets/src/main/res/layout/item_ticket_offer.xml
@@ -2,56 +2,81 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <ProgressBar
-        tools:visibility="gone"
-        android:id="@+id/loading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-    <View
-        android:id="@+id/marquee"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:background="@drawable/circle"
-        android:clipToOutline="true"
-        android:backgroundTint="@color/red" />
+    android:orientation="vertical"
+    tools:background="?attr/colorSurface"
+    tools:theme="@style/Theme.Effectivem">
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:paddingTop="?attr/viewPaddingHalf"
+        android:paddingBottom="?attr/viewPaddingHalf"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <ProgressBar
+            android:id="@+id/loading"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            tools:visibility="gone" />
 
-            <TextView
-                android:id="@+id/airline"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Уральские авиалинии" />
+        <View
+            android:id="@+id/marquee"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:background="@drawable/circle"
+            android:backgroundTint="@color/red"
+            android:clipToOutline="true" />
 
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="wrap_content"
+        <Space
+            android:layout_width="?attr/viewPaddingHalf"
+            android:layout_height="0dp" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="2 390 ₽" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/airline"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Уральские авиалинии"
+                    android:textAppearance="?attr/title_4" />
+
+                <TextView
+                    android:id="@+id/price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2 390 ₽ >"
+                    android:textAppearance="?attr/title_4"
+                    android:textColor="?attr/colorPrimary" />
+            </LinearLayout>
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/dates"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:text="07:00  09:10   10:00  11:00  12:00  13:00 "
+                    android:textAppearance="?attr/text_2" />
+            </HorizontalScrollView>
         </LinearLayout>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/dates"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="07:00  09:10   10:00  11:00  12:00  13:00 " />
-        </ScrollView>
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?attr/colorSurfaceVariant"/>
 </LinearLayout>
